--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -253,7 +253,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 513px;
       background:#fff;
       overflow: scroll;
@@ -347,7 +347,7 @@
           <b><span style="color:red"><i>Attention!</i></span> </b><span style="font-size:13px">We do not send your MikroTik backup file to our E-Mail, but you can use our E-Mail server to send the file to your E-Mail. if you don't like it you can use your own E-Mail server.</span>
           <br><br>
           Copy-Paste the Script to the Terminal</span>
-          <div class="list-mangle">
+          <div class="list-output-content">
             <table id="showScript" style="padding:5px; white-space: nowrap;">
               <tr>
                 <td>
