--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -247,7 +247,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 290px;
       background:#f9f9f9;
       overflow: auto;
@@ -321,7 +321,7 @@
           <div style="clear:both"></div>
           <img style="  display: block;  margin-left: auto;  margin-right: auto;  width: 70%;" src="https://user-images.githubusercontent.com/42666125/166714686-a2e1928e-7411-4119-a7b4-8cb41b4fbec5.png" alt="anti tethering mikrotik">
         </div>
-        <div class="list-mangle" style="margin-bottom:10px">
+        <div class="list-output-content" style="margin-bottom:10px">
           <div id="cont">
           </div>
           <table id="mytable" style="margin-top:5px; font-weight:normal;white-space: nowrap;">
