--- a/mikrotik-block-website-generator.html
+++ b/mikrotik-block-website-generator.html
@@ -247,7 +247,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 500px;
       background:#f9f9f9;
       overflow: auto;
@@ -326,7 +326,7 @@
         </select>
         First Regexp <input  type="text" id="first-regexp" style='color: green; width:98px; margin-right:5px' placeholder="" value="(\.|^)">
         Last Regexp <input  type="text" id="last-regexp" style='color: green; width:98px' placeholder="" value="$">
-        <div class="list-mangle" style="margin-bottom:10px">
+        <div class="list-output-content" style="margin-bottom:10px">
           <div id="cont"></div>
           <br>
           <table id="mytable" style="font-weight:normal">
