--- a/mikrotik-bonding-interface.html
+++ b/mikrotik-bonding-interface.html
@@ -240,7 +240,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 200px;
       background:#fff;
       overflow: auto;
@@ -327,7 +327,7 @@
           <label for="R1-failover"> Enable ARP Monitoring</label>
           <div style="padding-top:20px"></div>
           <span style="margin-left:2px"><b>Copy-Paste in Terminal Mikrotik - A</b></span>
-          <div class="list-mangle">
+          <div class="list-output-content">
             <div id="list-output-r1">
               <span style="color:#ff6600;">
               ######################################<br>
@@ -372,7 +372,7 @@
           <label for="R2-failover"> Enable ARP Monitoring</label>
           <div style="padding-top:20px"></div>
           <span style="margin-left:2px"><b>Copy-Paste in Terminal MikroTik - B</b></span>
-          <div class="list-mangle">
+          <div class="list-output-content">
             <div id="list-output-r2">
               <span style="color:#ff6600;">
               ######################################<br>
