--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -189,7 +189,7 @@
       display: table;
       clear: both;
       }
-      .list-mangle {
+      .list-output-content {
       height: 408px;
       background:#fff;
       overflow: auto;
@@ -316,7 +316,7 @@
 	  </div>
       <div class="content">
         <span style="margin-left:2px;font-size:14px"><b>COPY PASTE BURST RESULT TO SIMPLE QUEUE OR QUEUE TREE</b></span>
-        <div class="list-mangle" style="margin-bottom:10px">
+        <div class="list-output-content" style="margin-bottom:10px">
           <table style="font-weight:normal">
             <thead>
               <tr style="background-color: #eee;font-weight:normal">
