--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -245,7 +245,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 538px;
       background:#fff;
       overflow: scroll;
@@ -415,7 +415,7 @@
         </div>
         <div class="content">
           <span style="margin-left:2px">Script Generator Result</span>
-          <div class="list-mangle">
+          <div class="list-output-content">
             <table id="showScript" style="padding:5px;white-space: nowrap;">
               <tr>
                 <td>
