--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -181,7 +181,7 @@
       display: table;
       clear: both;
       }
-      .list-mangle {
+      .list-output-content {
       height: auto;
       background:#fff;
       overflow: auto;
@@ -199,7 +199,7 @@
       @media screen and (max-width:768px) {
       .header h1{max-width:100%;justify-content:center; border-top:0 !important}
       .header {border:none}
-      .logo-left a{margin-top:10px!important;font-size:25px}
+      .logo-left a{margin-top:10px!important;font-size:23px}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
       .mymenu{width:98%!important}
@@ -346,7 +346,7 @@
         <div style="margin-top:25px"></div>
         <button style="margin-top:-5px" type="button" onclick="myFunction()">Generate</button> 
         <button style="margin-top:-5px" type="button" onclick="selectElementContents(document.getElementById('list-output-r1'))">Copy Script</button> 
-        <div class="list-mangle">
+        <div class="list-output-content">
           <div id="list-output-r1">
             <span style="color:#ff6600;">
             ###############################################################<br>
