--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -247,7 +247,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 420px;
       background:#f9f9f9;
       overflow: auto;
@@ -357,7 +357,7 @@
           </select>
         </div>
         <div style="margin-bottom:10px;clear:both"></div>
-        <div class="list-mangle" style="margin-bottom:10px">
+        <div class="list-output-content" style="margin-bottom:10px">
           <div id="cont">
           </div>
           <table id="mytable" style="margin-top:5px; font-weight:normal;">
