--- a/mikrotik-pcq-burst-rate-queue-size-generator.html
+++ b/mikrotik-pcq-burst-rate-queue-size-generator.html
@@ -256,7 +256,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 500px;
       background:#fff;
       overflow: auto;
@@ -354,7 +354,7 @@
       </div>
       <div class="content">
         <span style="margin-left:2px;font-size:16px"><b>COPY PASTE BURST RESULT ON WINBOX</b></span>
-        <div class="list-mangle" style="margin-bottom:10px">
+        <div class="list-output-content" style="margin-bottom:10px">
           <table style="font-weight:normal">
             <thead>
               <tr style="background-color: #eee;font-weight:normal">
