--- a/mikrotik-share-user-multi-login.html
+++ b/mikrotik-share-user-multi-login.html
@@ -250,7 +250,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 410px;
       background:#fff;
       overflow: scroll;
@@ -351,7 +351,7 @@
         </div>
         <div class="content">
           <span style="margin-left:2px">Script Generator Result</span>
-          <div class="list-mangle">
+          <div class="list-output-content">
             <table id="showScript" style="padding:5px; ">
               <tr>
                 <td>
