--- a/mikrotik-username-password-hotspot-generator.html
+++ b/mikrotik-username-password-hotspot-generator.html
@@ -252,7 +252,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 522px;
       background:#fff;
       overflow: scroll;
@@ -341,7 +341,7 @@
         </div>
         <div class="content">
           <span style="margin-left:2px">Copy-Paste the Script to the Terminal</span>
-          <div class="list-mangle">
+          <div class="list-output-content">
             <table id="showScript" style="padding:5px; white-space: nowrap;">
               <tr>
                 <td>
