--- a/mirkotik-indonesia-timezone.html
+++ b/mirkotik-indonesia-timezone.html
@@ -54,13 +54,13 @@
       label{padding:5px 5px 5px 0;display:inline-block}
       input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
-      .list-mangle{height:250px;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:10px;margin-top:10px;border:1px solid #ccc;border-radius:5px;white-space:nowrap}
+      .list-output-content{height:250px;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:10px;margin-top:10px;border:1px solid #ccc;border-radius:5px;white-space:nowrap}
       #input-kota{max-width:100%}
       .mikrotik-logo{display:none}
       @media screen and (max-width:768px) {
       .header h1{max-width:100%;justify-content:center; border-top:0 !important}
 	  .header {border:none}
-      .logo-left a{margin-top:10px!important;font-size:25px}
+      .logo-left a{margin-top:10px!important;font-size:23px}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
       .mymenu{width:98%!important}
@@ -72,6 +72,7 @@
       .reg-area{margin:0!important}
       }
       @media screen and (max-width:600px) {
+	  button{margin-bottom:5px;}
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
       .logo-left img{height:auto;width:40px;margin-top:-5px!important}
@@ -185,7 +186,7 @@
         <span class="reg-area" style="margin-left:10px">Regional Area </span>
         <span style="color:green;">[ <span id="input-regional">Asia/Jakarta (+07:00 WIB)</span> ]</span>
         <div style="margin-top:10px"></div>
-        <div class="list-mangle">
+        <div class="list-output-content">
           <div id="list-output-r1">
             <span style="color:#ff6600;">
             ###############################################################<br>
