--- a/pcc-calculation.html
+++ b/pcc-calculation.html
@@ -66,16 +66,17 @@
       .row:after{content:"";display:table;clear:both}
       .list-game{height:200px;background:#fff;overflow:scroll;overflow-x:hidden;width:100%;margin-top:2px;padding:3px;border:1px solid rgba(0,0,0,0.25);border-radius:5px}
       .list-game label{padding:0;display:inline-block}
-      .list-mangle{height:400px;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
+      .list-output-content{height:400px;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
       table,tr,td{border:none}
       table{border-collapse:collapse;width:100%;font-size:14px}
       td,th{border:1px solid #ddd;text-align:left;padding:8px}
+	  button{margin-bottom:5px;}
       @media screen and (max-width:768px) {
       .sidebar,.content{border-radius:5px;display:block;width:100%}
       .sidebar{height:200px;margin-bottom:5px}
       .header h1{max-width:100%;justify-content:center}
 	  .header {border:none}	  
-      .logo-left a{margin-top:10px!important;font-size:25px}
+      .logo-left a{margin-top:10px!important;font-size:23px}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
       .mymenu{width:98%!important}
@@ -185,7 +186,7 @@
       </div>
       <div class="content">
         <span style="margin-left:2px"><b>LB PCC CALCULATION RESULT</b></span>
-        <div class="list-mangle" style="margin-bottom:10px">
+        <div class="list-output-content" style="margin-bottom:10px">
           <table style="font-weight:bold">
             <thead>
               <tr style="background-color: #eee;font-weight:bold">
