--- a/policy-based-routing-website.html
+++ b/policy-based-routing-website.html
@@ -247,7 +247,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 500px;
       background:#f9f9f9;
       overflow: auto;
@@ -475,7 +475,7 @@
         </select>
         First Regexp <input  type="text" id="first-regexp" style='color: #ff6600; font-weight:bold; width:98px; margin-right:5px' placeholder="regex" value=".">
         Last Regexp <input  type="text" id="last-regexp" style='color: #ff6600; font-weight:bold; width:98px' placeholder="regex" value="">
-        <div class="list-mangle" style="margin-bottom:10px">
+        <div class="list-output-content" style="margin-bottom:10px">
           <div id="cont"></div>
           <br>
           <table id="mytable" style="font-weight:normal">
