--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -64,10 +64,11 @@
       table{font-family:arial,sans-serif;border-collapse:collapse;width:100%}
       td,th{border:1px solid #bbb;text-align:left;padding:15px}
       tr:nth-child(even){background-color:#eee}
+	  .mikrotik-logo {display:none}
       @media screen and (max-width:768px) {
       .header h1{max-width:100%;justify-content:center}
       .header{border:none}
-      .logo-left a{margin-top:10px!important;font-size:25px}
+      .logo-left a{margin-top:10px!important;font-size:23px}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
       .mymenu{width:98%!important}
@@ -79,6 +80,7 @@
       .reg-area{margin:0!important}
       }
       @media screen and (max-width:600px) {
+	  button{margin-bottom:5px;}
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
       .logo-left img{height:auto;width:40px;margin-top:-5px!important}
