--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -274,7 +274,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 300px;
       background:#fff;
       overflow: auto;
@@ -285,7 +285,7 @@
       border: 1px solid #ccc;
       border-radius: 5px;
       }
-      .list-mangle2 {
+      .list-output-content2 {
       height: 300px;
       background-color:#ff6600;
       overflow: auto;
@@ -354,7 +354,7 @@
         </div>
         <div class="content">
           <div style="margin-left:2px; margin-top:5px; font-weight:bold">Copy-Paste the Script to your Terminal!</div>
-          <div class="list-mangle">
+          <div class="list-output-content">
             <table id="showScript" style="padding:5px; white-space: nowrap;">
               <tr>
                 <td> <span style="color:#ff6600;">
@@ -404,7 +404,7 @@
           <button style="margin-right:10px;" type="button" onclick="myFunction()">Generate Script</button>
           <button style="margin-top:0px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
           <span style="float:right;margin-bottom:15px; margin-top:0px;padding-left:20px; font-size:14px" class="d-link"><a class="download" href="#" download="error.html">Download error.html</a></span><br>
-          <div class="list-mangle2">
+          <div class="list-output-content2">
             <div style="text-align:center">
               <span id="msg-title" style="color:#fff; font-weight:bold; font-size:70px;">EXPIRED!</span><br>
               <span id="msg-body" style="color:#fff; font-weight:bold; font-size:15px;line-height:2.0">
