--- a/mikrotik-port-forward-generator.html
+++ b/mikrotik-port-forward-generator.html
@@ -248,7 +248,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 425px;
       background:#f9f9f9;
       overflow: auto;
@@ -318,7 +318,7 @@
         <h1>MIKROTIK <span style="color:#ff6600">PORT FORWARDING</span> SCRIPT GENERATOR FOR ROUTEROS</h1>
       </div>
       <div class="sidebar">
-        <div class="list-mangle" style="margin-bottom:10px">
+        <div class="list-output-content" style="margin-bottom:10px">
           <div id="cont">
           </div>
           <table id="mytable" style="margin-top:5px; font-weight:normal;white-space: nowrap;">
