--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -248,7 +248,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 425px;
       background:#f9f9f9;
       overflow: auto;
@@ -341,7 +341,7 @@
           </select>
         </div>
         <div style="margin-bottom:10px;clear:both"></div>
-        <div class="list-mangle" style="margin-bottom:10px">
+        <div class="list-output-content" style="margin-bottom:10px">
           <div id="cont">
           </div>
           <table id="mytable" style="margin-top:5px; font-weight:normal;">
