--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -48,8 +48,7 @@
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
-      a:active{color:#f60}
-      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;margin-right:5px;width:100%;font-size:15px;font-weight:700;cursor:pointer;border-radius:5px;color:#fff}
+      a:active{color:#f60}      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;margin-right:5px;width:100%;font-size:15px;font-weight:700;cursor:pointer;border-radius:5px;color:#fff}
       button:hover{background-color:#ccc;color:#111}
       .row:after{content:"";display:table;clear:both}
       input[type=checkbox]{margin-right:7px}
@@ -61,14 +60,15 @@
       .qrcode{padding-top:185px;padding-left:80px;position:absolute}
       .text-ssid{padding-top:28px;padding-left:90px;position:absolute;font-size:17pt;font-weight:700;color:#E12D00;position:absolute}
       .myImage{padding:0;margin:0}
+	  .mikrotik-logo {display:none}
       @media screen and (max-width:768px) {
-      .list-mangle{height:400px}
+      .list-output-content{height:400px}
       .main-wrap{display:block}
       .sidebar,.content{border-radius:5px;display:block;width:100%}
       .sidebar{height:auto;margin-bottom:5px}
       .header h1{max-width:100%;justify-content:center}
       .header {border:none}
-      .logo-left a{margin-top:10px!important;font-size:25px}
+      .logo-left a{margin-top:10px!important;font-size:23px}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
       .mymenu{width:98%!important}
@@ -81,6 +81,7 @@
       .content{overflow:scroll}
       }
       @media screen and (max-width:600px) {
+	  button{margin-bottom:5px;}
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
       .logo-left img{height:auto;width:40px;margin-top:-5px!important}
