--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -236,7 +236,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 737px;
       background:#fff;
       width: 100%;
@@ -345,11 +345,11 @@
       overflow: hidden; 
       border:none;   
       }
-      .list-mangle {
+      .list-output-content {
       height:100%;  
       border:none;   
       }
-      .content, .welcome, .list-mangle {
+      .content, .welcome, .list-output-content {
       display:none;
       }     
       .mymenu {
@@ -2013,7 +2013,7 @@
         <div class='backtotop'><a href='#top'>Back to Top</a></div>
       </div>
       <div class="content">
-        <div class="list-mangle">
+        <div class="list-output-content">
           <div id="reloadads1" style="width:100%; height:90px; margin-top:10px; margin-left:5px; margin-bottom:10px">
             <!-- MIKROTIK SCRIPT DB3 -->
             <ins class="adsbygoogle"
