--- a/nth.html
+++ b/nth.html
@@ -248,7 +248,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 562px;
       background:#fff;
       overflow: scroll;
@@ -376,7 +376,7 @@
         </div>
         <div class="content">
           <span style="margin-left:2px">Script Generator Result</span>
-          <div class="list-mangle">
+          <div class="list-output-content">
             <div style="width:100%; height:90px; margin-top:10px; margin-left:10px; margin-bottom:5px;">
               <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
               <!-- MIKROTIK SCRIPT DB3 -->
