--- a/port-knocking-icmp.html
+++ b/port-knocking-icmp.html
@@ -276,7 +276,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 380px;
       background:#fff;
       overflow: auto;
@@ -359,7 +359,7 @@
         </div>
         <div class="content">
           <div style="margin-left:2px; margin-top:5px">Script Generator Result</div>
-          <div class="list-mangle">
+          <div class="list-output-content">
             <div style="width:100%; height:90px; margin-top:10px; margin-left:10px; margin-bottom:5px">
               <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
               <!-- MIKROTIK SCRIPT DB3 -->
