--- a/simple-queue-generator-shared.html
+++ b/simple-queue-generator-shared.html
@@ -250,7 +250,7 @@
       padding: 0;
       display: inline-block;
       } 
-      .list-mangle {
+      .list-output-content {
       height: 557px;
       background:#fff;
       overflow: scroll;
@@ -375,7 +375,7 @@
         </div>
         <div class="content">
           <span style="margin-left:2px">Script Generator Result</span>
-          <div class="list-mangle">
+          <div class="list-output-content">
             <div style="width:100%; height:90px; margin-top:10px; margin-left:10px; margin-bottom:5px;" >
               <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
               <!-- MIKROTIK SCRIPT DB3 -->
