--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -56,15 +56,16 @@
       label{padding:8px 5px 5px;display:inline-block}
       input[type=submit]{background-color:#f60;color:#fff;padding:13px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
-      .list-mangle{height:525px;background:#fff;overflow:scroll;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
-      @media screen and (max-width:768px) {
-	  .list-mangle{height:400px;}
+      .list-output-content{height:525px;background:#fff;overflow:scroll;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
+      .mikrotik-logo {display:none}
+	  @media screen and (max-width:768px) {
+	  .list-output-content{height:400px;}
       .main-wrap{display:block}
       .sidebar,.content{border-radius:5px;display:block;width:100%}
       .sidebar{height:auto;margin-bottom:5px}
       .header h1{max-width:100%;justify-content:center}
 	  .header {border:none}	  
-      .logo-left a{margin-top:10px!important;font-size:25px}
+      .logo-left a{margin-top:10px!important;font-size:23px}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
       .mymenu{width:98%!important}
@@ -76,6 +77,7 @@
       .reg-area{margin:0!important}
       }
       @media screen and (max-width:600px) {
+	  button{margin-bottom:5px;}
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
       .logo-left img{height:auto;width:40px;margin-top:-5px!important}
@@ -195,7 +197,7 @@
         </div>
         <div class="content">
           <span style="margin-left:2px">Script Generator Results</span>
-          <div class="list-mangle">
+          <div class="list-output-content">
             <table id="showScript" style="padding:5px;">
               <tr>
                 <td>
