--- a/pcc.html
+++ b/pcc.html
@@ -446,7 +446,7 @@
         /ip firewall mangle remove [find comment="LB By BNT"]<br>
         /ip firewall address-list remove [find comment="LB By BNT"]<br> 
         /routing table remove [find comment="LB By BNT"]
-        <div style="margin-top:15px; margin-bottom:15px">
+        <div style="margin-top:15px;">
           © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
         </div>		
       </div>
