--- a/nth.html
+++ b/nth.html
@@ -309,15 +309,15 @@
         </div>
       </div>
       <div class="footer">
-        <div style="float:right">
-          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
-        </div>
         <span style="color:#ff6600"><b># This script for remover all script from this Generator</b></span><br>
         /ip firewall nat remove [find comment="LB By BNT"]<br>
         /ip route remove [find comment="LB By BNT"]<br>
         /ip firewall mangle remove [find comment="LB By BNT"]<br>
         /ip firewall address-list remove [find comment="LB By BNT"]<br>
         /routing table remove [find comment="LB By BNT"]
+        <div style="margin-top:15px;">
+          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
+        </div>		
       </div>
     </div>
       <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen"><div id="center-screen" class="center-screen">Great! One Step Again <br>For Activate Your Member<br><button id="verify">VERIFY YOUR E-MAIL NOW</button></div></div>
