--- a/ecmp.html
+++ b/ecmp.html
@@ -231,12 +231,12 @@
           <div class="list-output-content">
             <div id="showScript">
               <span style="color:#ff6600;">
-              ################################################<br>
-              # LOAD BALANCING ECMP SCRIPT GENERATOR<br>
+              ###############################################################<br>
+              # Load Balancing ECMP (Equal Cost Multi Path) / LB ECMP Script Generator<br>
               # Date/Time: <span id="tanggalwaktu"></span><br>
-              # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
+              # Created by: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
               # Load Balancing Method: <span id="vpn-list-text-info" style="font-weight:bold;text-transform: uppercase">ECMP (Equal Cost Multi Path)</span><br>
-              ################################################<br>
+              ###############################################################<br>
               </span><br>
               <b>/ip firewall address-list</b><br>
               add address=192.168.0.0/16 list=LOCAL-IP comment="LB By BNT"<br>
