--- a/pcc.html
+++ b/pcc.html
@@ -231,12 +231,12 @@
           <div class="list-output-content">
             <div id="showScript" >
               <span style="color:#ff6600 !important;">
-              #############################################################<br>
-              # LOAD BALANCING (LB) PCC SCRIPT GENERATOR<br>
+              ###############################################################<br>
+              # Load Balancing Per Connection Clasifier (LB PCC) Script Generator<br>
               # Date/Time: <span id="tanggalwaktu"></span><br>
-              # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
-              # Load Balancing Method -> <span id="vpn-list-text-info" style="font-weight:bold;">PCC (Per Connection Clasifier)</span><br>
-              #############################################################<br>
+              # Created by: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
+              # Load Balancing Method -> <span id="vpn-list-text-info" style="font-weight:bold;">PCC (PER CONNECTION CLASIFIER)</span><br>
+              ###############################################################<br>
               </span>
               <b>/ip firewall address-list</b><br>
               add address=192.168.0.0/16 list=LOCAL-IP comment="LB By BNT"<br>
