--- a/simple-queue-generator-shared.html
+++ b/simple-queue-generator-shared.html
@@ -205,7 +205,7 @@
           </div>
 
             <input type="checkbox" id="auto-shared"><label for="auto-shared" style="padding-left:0px">Auto Set For Bandwidth Shared (UP-TO)</label>
-
+<div style="clear:both"></div>
 
           <button style="margin-top:10px;" type="button" onclick="myFunctionInput()">Generate</button> <button style="margin-left:10px" type="button" onclick="location.reload()">Clear All</button> 
 
