--- a/simple-queue-generator.html
+++ b/simple-queue-generator.html
@@ -237,6 +237,7 @@
             Bucket Capacity = <span style="color:#ff6600" id="bucket-capacity-down">0</span><br>
             Burst <span style="color:#ff6600" id="bucket-size-down">0 Mbps</span><br>
           </div>
+		  <div style="clear:both"></div>
           <button style="margin-top:10px;" type="button" onclick="myFunctionInput()">Generate</button> <button style="margin-left:10px" type="button" onclick="location.reload()">Clear All</button> 
           <br>
         </div>
