--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -56,7 +56,7 @@
       label{padding:8px 5px 5px;display:inline-block}
       input[type=submit]{background-color:#f60;color:#fff;padding:13px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
-      .list-output-content{height:525px;background:#fff;overflow:scroll;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
+      .list-output-content{height:auto;background:#fff;overflow:scroll;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
       .mikrotik-logo {display:none}
 	  @media screen and (max-width:768px) {
 	  .list-output-content{height:400px;}
