--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -59,7 +59,7 @@
       .list-output-content{height:auto;background:#fff;overflow:scroll;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
       .mikrotik-logo {display:none}
 	  @media screen and (max-width:768px) {
-	  .list-output-content{height:400px;}
+	  .list-output-content{height:auto}
       .main-wrap{display:block}
       .sidebar,.content{border-radius:5px;display:block;width:100%}
       .sidebar{height:auto;margin-bottom:5px}
